@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2008/10/14 07:38:26 markd Exp $
+# $NetBSD: Makefile,v 1.5 2012/04/15 16:54:17 brook Exp $
 #
 
 CATEGORIES=	math
@@ -7,10 +7,12 @@ MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/genetics/
 COMMENT=	Classes and methods for handling genetic data
-# LICENSE=	GPL (gnu-gpl-v?)
+LICENSE=	gnu-gpl-v3
+
+USE_TOOLS+=	perl
 
 R_PKGNAME=	genetics
-R_PKGVER=	1.3.6
+R_PKGVER=	1.3.8
 
 DEPENDS+=	R-combinat>=0.0.8:../../math/R-combinat
 DEPENDS+=	R-gdata>=2.8.2:../../math/R-gdata
