@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2009/12/11 19:30:46 adam Exp $
+# $NetBSD: Makefile,v 1.6 2012/04/15 17:37:43 brook Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -9,10 +9,10 @@ COMMENT=	Uni/multivariable geostatistical modelling, prediction and simulation
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	gstat
-R_PKGVER=	1.0-10
+R_PKGVER=	1.0-15
 
 DEPENDS+=	R-sp>=0.9.98:../../math/R-sp
-DEPENDS+=	R-spacetime>=0.6.2:../../math/R-spacetime
+DEPENDS+=	R-spacetime>=1.0.0:../../math/R-spacetime
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
