@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2009/12/11 19:30:46 adam Exp $
+$NetBSD: distinfo,v 1.4 2012/04/15 17:37:43 brook Exp $
 
-SHA1 (R/gstat_1.0-10.tar.gz) = 8802c7854e668c6ea78b1728ec2a58631ff49208
-RMD160 (R/gstat_1.0-10.tar.gz) = 39a161b5d93fb44107f8b114d2e4618aa1aec016
-Size (R/gstat_1.0-10.tar.gz) = 2012598 bytes
+SHA1 (R/gstat_1.0-15.tar.gz) = 56b866ecd9db30a96756084f927ed878b1ee7745
+RMD160 (R/gstat_1.0-15.tar.gz) = 37db644464ea354e2df16c4b7d1e5b48e399e0c3
+Size (R/gstat_1.0-15.tar.gz) = 2029233 bytes
