@@ -1,0 +1,1 @@
+Tools for working with and comparing sets of points and intervals.
