@@ -1,0 +1,17 @@
+# $NetBSD$
+
+CATEGORIES=	math
+MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/spacetime/
+COMMENT=	Tools for working with points and intervals
+LICENSE=	artistic-2.0
+
+USE_LANGUAGES=	c++
+
+R_PKGNAME=	intervals
+R_PKGVER=	0.13.3
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
