@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2012/04/15 17:33:04 brook Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -9,11 +9,12 @@ COMMENT=	Classes and methods for spatio-temporal data
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	spacetime
-R_PKGVER=	0.6-2
+R_PKGVER=	1.0-3
 
 DEPENDS+=	R-sp>=0.9.98:../../math/R-sp
-DEPENDS+=	R-xts>=0.8.6:../../math/R-xts
-DEPENDS+=	R-zoo>=1.7.7:../../math/R-zoo
+DEPENDS+=	R-xts>=0.8.8:../../math/R-xts
+DEPENDS+=	R-zoo>=1.7.9:../../math/R-zoo
+DEPENDS+=	R-intervals>=0:../../math/R-intervals
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
