@@ -1,5 +1,5 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1.1.1 2012/04/15 17:33:04 brook Exp $
 
-SHA1 (R/spacetime_0.6-2.tar.gz) = a9eb8572b64f4e149934f7d39b1ea6db8981b12b
-RMD160 (R/spacetime_0.6-2.tar.gz) = 5ae8904042077057bb0791145fc45aff6e8c7efd
-Size (R/spacetime_0.6-2.tar.gz) = 3456009 bytes
+SHA1 (R/spacetime_1.0-3.tar.gz) = cb8018190c6ac95bc271b1d6b673c62c77c3a811
+RMD160 (R/spacetime_1.0-3.tar.gz) = 936191b74b9189e94bba0df6f233a49b3075b1f7
+Size (R/spacetime_1.0-3.tar.gz) = 1956873 bytes
