@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2012/04/15 17:13:47 brook Exp $
+# $NetBSD: Makefile,v 1.2 2012/11/30 08:34:39 wen Exp $
 
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=contrib/}
@@ -9,7 +9,7 @@ COMMENT=	eXtensible Time Series
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	xts
-R_PKGVER=	0.8-8
+R_PKGVER=	0.9-3
 
 USE_LANGUAGES+=	c fortran
 
