@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2012/04/15 17:13:47 brook Exp $
+$NetBSD: distinfo,v 1.2 2012/11/30 08:34:39 wen Exp $
 
-SHA1 (R/xts_0.8-8.tar.gz) = 36e04544eb9a4693131cb65d58690d0aeb13cc84
-RMD160 (R/xts_0.8-8.tar.gz) = f34b348b1ab21297fe54127f32c808e53c69def8
-Size (R/xts_0.8-8.tar.gz) = 458019 bytes
+SHA1 (R/xts_0.9-3.tar.gz) = bcb483767f4e26ba09ab2d82ed01b5254cd68ae9
+RMD160 (R/xts_0.9-3.tar.gz) = a868d079362146759fc34c95e5dfd2fd9cfb085a
+Size (R/xts_0.9-3.tar.gz) = 457533 bytes
