@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.306 2013/01/23 21:59:04 wiz Exp $
+$NetBSD: CHANGES-2013,v 1.311 2013/01/24 02:00:50 wen Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -391,3 +391,8 @@ Changes to the packages collection and infrastructure in 2013:
 	Added x11/gxmessage version 2.20.0 [wiz 2013-01-23]
 	Added x11/tktable version 2.10nb1 [wiz 2013-01-23]
 	Added editors/dhex version 0.68 [wiz 2013-01-23]
+	Added math/R-intervals version 0.13.3 [wen 2013-01-24]
+	Updated math/R-spacetime to 1.0.3 [wen 2013-01-24]
+	Updated math/R-gstat to 1.0.15 [wen 2013-01-24]
+	Updated math/R-xts to 0.9.3 [wen 2013-01-24]
+	Updated math/R-genetics to 1.3.8 [wen 2013-01-24]
